--- a/group_project/pom.xml
+++ b/group_project/pom.xml
@@ -17,4 +17,23 @@
         <maven.compiler.target>18</maven.compiler.target>
         <exec.mainClass>login.com.my.group_project.Group_project</exec.mainClass>
     </properties>
+    <build>
+      <plugins>
+        <plugin>
+          <!-- Build an executable JAR -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.1.0</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>com.my.group_project.Login</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
 </project>
